syntax = "proto3";

package hookproto;

option java_multiple_files = true;
option java_package = "com.github.karthyks.project.era.proto.hook";
option java_outer_classname = "HookProto";
option objc_class_prefix = "HP";

message HookRequest {
    string name = 1;
    bool isFcmAvailable = 2;
    string systemLoad = 3;
    string freeMemory = 4;
    string maxMemory = 5;
}

message HookResponse {
    string status = 1;
}

service Hook {
   rpc initiate(stream HookRequest) returns(HookResponse);
}

